--- a/public/htmls/dashboard.html
+++ b/public/htmls/dashboard.html
@@ -7,12 +7,10 @@
 </head>
 
 <body>
-  <!-- Overlay first: full-screen dimmer behind everything -->
   <div class="background">
     <div class="overlay">
 
   <div class="layout--sidebar">
-    <!-- Sidebar -->
     <aside class="sidebar">
       <a class="logo-wrap" href="dashboard.html">
         <img src="../images/Logo.png" alt="YogiTrack Logo" class="logo" />
@@ -21,7 +19,7 @@
       <nav class="nav">
         <a href="instructor.html">Instructors</a>
         <a href="#">Packages</a>
-        <a href="#">Class Schedule</a>
+        <a href="class.html">Class Schedule</a>
         <a href="#">Customers</a>
         <a href="#">Check-ins</a>
         <a href="../index.html">Log Out</a>
@@ -30,7 +28,7 @@
 
 
   </div>
-    </div> <!-- End of background wrapper -->
+    </div> 
 </body>
 
 </html>
