--- a/public/htmls/instructor.html
+++ b/public/htmls/instructor.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="layout--sidebar">
-  <!-- Re-use the same sidebar -->
   <aside class="sidebar">
     <a class="logo-wrap" href="dashboard.html">
       <img src="../images/Logo.png" alt="YogaTrack Logo" class="logo">
@@ -14,28 +13,24 @@
     <nav class="nav">
          <a href="instructor.html">Instructors</a>
         <a href="#">Packages</a>
-        <a href="#">Class Schedule</a>
+        <a href="class.html">Class Schedule</a>
         <a href="#">Customers</a>
         <a href="#">Check-ins</a>
         <a href="../index.html">Log Out</a>
     </nav>
   </aside>
 
-  <!-- Instructor form -->
   <main class="layout--center">
     <form class="card" id="instructorForm" >
       <h2>Instructor Details</h2>
 
-      <!-- Instructor Id-->
       <label id = "instructorIdLabel" for="instructorID">Instructor ID
         <select name="instructorId" id="instructorIdSelect" class="form-input" required>
           <option value=""> -- Select Instructor Id --</option>
-          <!-- Options will be populated by JavaScript-->
         </select>
       </label>
 
       <label>
-        <!-- Toggle with InstructorIdLabel -->
          <label id="instructorIdTextLabel" style="display: none;">Instructor ID</label>
          <input id="instructorIdText" type="text" readonly/>
       </label>
